--- a/package.json
+++ b/package.json
@@ -1,22 +1,87 @@
 {
-  "name": "nuxt-app",
-  "private": true,
+  "name": "adaptcv-backend",
+  "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
+  "description": "API for AdaptCV.",
+  "exports": "./dist/index.cjs",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
+    "build": "pkgroll --minify",
+    "start": "npm run build && node ./dist/index.js",
+    "test:all": "vitest",
+    "test:unit": "cross-env NODE_ENV=test vitest --project unit",
+    "test:int": "cross-env NODE_ENV=test vitest --project integration",
+    "test:e2e": "cross-env NODE_ENV=test vitest --project e2e",
+    "test:e2e:w": "cross-env NODE_ENV=test vitest --project e2e --watch"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "adaptcv",
+    "CV",
+    "API",
+    "backend"
+  ],
+  "author": "Carlos García <carlosgarcia.cagm@gmail.com>",
+  "license": "ISC",
   "dependencies": {
-    "@nuxt/eslint": "1.3.0",
-    "@nuxt/icon": "1.11.0",
-    "@nuxt/image": "1.10.0",
-    "@nuxt/test-utils": "3.17.2",
-    "eslint": "^9.0.0",
-    "nuxt": "^3.16.2",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "@lordcrainer/adaptcv-shared-types": "^1.9.2",
+    "axios": "^1.9.0",
+    "bcrypt": "^5.1.1",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.2",
+    "morgan": "^1.10.0",
+    "redis": "^5.0.1",
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/method-override": "^3.0.0",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.15.17",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
+    "mongodb-memory-server": "^10.1.4",
+    "mysql2": "^3.14.1",
+    "pkgroll": "^2.12.2",
+    "prettier": "^3.5.3",
+    "supertest": "^7.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "ts-standard": "^12.0.2",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
