--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.14.2",
     "morgan": "^1.10.0",
     "redis": "^5.0.1",
     "reflect-metadata": "^0.2.2",
+    "short-unique-id": "^5.2.2",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0"
   },
